cmake_minimum_required(VERSION 3.20)
project(Hazel VERSION 0.0.1)
#CPP标准
set(CMAKE_CXX_STANDARD_REQUIRED 20)
set(CMAKE_CXX_STANDARD 20)
#输出目录
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}/)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}/)
#debug release 后缀名
set(CMAKE_DEBUG_POSTFIX "_d")
set(CMAKE_RELEASE_POSTFIX "_r")
#正文
include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src)
file(GLOB_RECURSE SOURCE_CODES ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_library(Hazel STATIC ${SOURCE_CODES})
set(INSTALL_LOCATION /Volumes/Disi1lusion/Repository/CPP/libs)
set(CMAKE_INSTALL_PREFIX ${INSTALL_LOCATION})
#导出属性
